# GenAI

./: README.md  pyproject.toml
memory/: mem.py
ollama/: docker-compose.yml  node.md  ollama_api.py
rag/: notes.md  rag1.py
tokenizer/: tokenizer.py
weather-agent/: wather-agent.py
