[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-genai>=1.14.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.3",
    "mem0ai>=0.1.98",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "pypdf>=5.4.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
]
